--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -10,15 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "id": "d00cd035-b96d-4ee2-974e-ba1cda950c9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "#!pip install openpyxl\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import Prepare_Data\n",
+    "\n",
+    "#autoreload download #pip install ipython\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "\n",
     "# Sti til usa_dsf.parquet\n",
@@ -2385,7 +2399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
+   "id": "3823ffec-0d1f-44ad-bb35-eb5493e665cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Prepare_Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "321cd6d7-42f0-4f16-8830-8688abf1c2d3",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2420,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[48], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mPrepare_Data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_cluster_labels\u001b[49m(file_path_cluster_labels, file_path_factor_details)\n",
+      "Cell \u001b[1;32mIn[56], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mPrepare_Data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_cluster_labels\u001b[49m(file_path_cluster_labels, file_path_factor_details)\n",
       "\u001b[1;31mAttributeError\u001b[0m: module 'Prepare_Data' has no attribute 'process_cluster_labels'"
      ]
     }
