--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -32,10 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "d00cd035-b96d-4ee2-974e-ba1cda950c9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -46,7 +55,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "\n",
+    "file_path_id_test=\"./data_test/top_5_percent_ids.csv\"\n",
     "# Sti til usa_dsf.parquet\n",
     "file_path_usa_dsf = \"./Data/usa_dsf.parquet\"\n",
     "file_path_usa = \"./Data/usa.parquet\"\n",
@@ -81,6 +90,97 @@
    "source": [
     "df = pd.read_parquet(file_path_usa_dsf, engine='pyarrow')\n",
     "print(\"Fil indlæst med succes.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "36b8bcac-d451-4c8f-9025-01f85fd2f670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_ids_from_dataset(file_path_usa_dsf, file_path_id_test, output_path, start_date):\n",
+    "    \"\"\"\n",
+    "    Indlæser dataset fra en Parquet-fil, beholder kun ID'er fra en liste, filtrerer på startdato og gemmer resultatet.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path_usa_dsf (str): Sti til den originale Parquet-fil.\n",
+    "        file_path_id_test (str): Sti til CSV-filen med ID'er, der skal beholdes.\n",
+    "        output_path (str): Sti til at gemme det filtrerede dataset.\n",
+    "        start_date (str): Startdato i formatet 'YYYY-MM-DD' for at filtrere data.\n",
+    "\n",
+    "        Example:\n",
+    "        file_path_usa_dsf = \"./Data/usa_dsf.parquet\"  # Din input Parquet-fil\n",
+    "        file_path_id_test = \"./data_test/top_5_percent_ids.csv\"  # CSV-fil med ID'er\n",
+    "        output_path = \"./data_test/filtered_data.parquet\"  # Output-fil\n",
+    "        start_date = \"2010-01-31\"  # Vælg din startdato\n",
+    "\n",
+    "filter_ids_from_dataset(file_path_usa_dsf, file_path_id_test, output_path, start_date)\n",
+    "    \"\"\"\n",
+    "    # Indlæs det oprindelige dataset\n",
+    "    df = pd.read_parquet(file_path_usa_dsf, engine='pyarrow')\n",
+    "    print(\"Fil indlæst med succes. Antal rækker før filtrering:\", len(df))\n",
+    "\n",
+    "    # Indlæs ID'erne, der skal beholdes\n",
+    "    df_ids = pd.read_csv(file_path_id_test)\n",
+    "    ids_to_keep = set(df_ids['id'])  # Konverter til et set for hurtigere opslag\n",
+    "\n",
+    "    # Filtrer dataset ved kun at beholde de ID'er fra CSV-filen\n",
+    "    df_filtered = df[df['id'].isin(ids_to_keep)].copy()  # Tilføj .copy() for at undgå advarsler\n",
+    "    print(\"Filtrering af ID'er udført. Antal rækker efter filtrering:\", len(df_filtered))\n",
+    "\n",
+    "    # Tjek om 'eom' findes, og find alternativ hvis ikke\n",
+    "    if 'eom' not in df_filtered.columns:\n",
+    "        alternative_columns = ['date', 'timestamp', 'end_of_month', 'period']\n",
+    "        found_col = None\n",
+    "        for col in alternative_columns:\n",
+    "            if col in df_filtered.columns:\n",
+    "                found_col = col\n",
+    "                df_filtered.loc[:, 'eom'] = df_filtered[col]  # Brug .loc for at undgå warning\n",
+    "                print(f\"Bruger '{col}' i stedet for 'eom'.\")\n",
+    "                break\n",
+    "        if not found_col:\n",
+    "            raise KeyError(\"Kolonnen 'eom' findes ikke i dataset. Tjek dine data.\")\n",
+    "\n",
+    "    # Konverter 'eom' til datetime for filtrering\n",
+    "    df_filtered.loc[:, 'eom'] = pd.to_datetime(df_filtered['eom'], errors='coerce')\n",
+    "\n",
+    "    # Filtrer på startdato\n",
+    "    df_filtered = df_filtered[df_filtered['eom'] >= pd.to_datetime(start_date)]\n",
+    "    print(f\"Filtrering på startdato {start_date} udført. Antal rækker efter filtrering:\", len(df_filtered))\n",
+    "\n",
+    "    # Udskriv antal unikke virksomheder efter filtrering\n",
+    "    unique_companies = df_filtered['id'].nunique()\n",
+    "    print(f\"Antal unikke virksomheder efter filtrering: {unique_companies}\")\n",
+    "\n",
+    "    # Gem det filtrerede dataset som en Parquet-fil\n",
+    "    df_filtered.to_parquet(output_path, engine='pyarrow', index=False)\n",
+    "    print(f\"Fil gemt som {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fe60d92-a26c-45e7-af1b-40991b800948",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fil indlæst med succes. Antal rækker før filtrering: 176877668\n",
+      "Filtrering af ID'er udført. Antal rækker efter filtrering: 2179398\n",
+      "Bruger 'date' i stedet for 'eom'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path_usa_dsf = \"./Data/usa_dsf.parquet\"  # Din input Parquet-fil\n",
+    "file_path_id_test = \"./data_test/top_5_percent_ids.csv\"  # CSV-fil med ID'er\n",
+    "output_path = \"./data_test/filtered_data.parquet\"  # Output-fil\n",
+    "start_date = \"2010-01-31\"  # Vælg din startdato\n",
+    "\n",
+    "filter_ids_from_dataset(file_path_usa_dsf, file_path_id_test, output_path, start_date)\n"
    ]
   },
   {
@@ -1345,6 +1445,48 @@
     "# Udskriv information\n",
     "print(f\"Grænseværdi for top 5% virksomheder: {threshold}\")\n",
     "print(f\"Antal unikke virksomheder i top 5%: {len(top_5_ids)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8f35d925-7ac4-4481-9b98-9e0daf9340e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2010-01-31 00:00:00')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d122742f-23ec-4d9a-9c73-47786fdea9cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2023-11-30 00:00:00')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_date"
    ]
   },
   {
