Tiflløjet alt til test af data

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -3230,6 +3230,125 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "7096db17-be13-4f8c-bf74-382a2dd922aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pandas.tseries.offsets import MonthEnd\n",
+    "\n",
+    "def process_risk_free_rate(file_path, start_date, end_date=None, output_path=\"./data_test/risk_free_filtered.csv\"):\n",
+    "    \"\"\"\n",
+    "    Indlæser en CSV-fil med risikofri rente-data, konverterer datoer og filtrerer på startdato (og evt. slutdato),\n",
+    "    og gemmer resultatet som en CSV-fil i 'data_test'-mappen.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (str): Stien til CSV-filen med risikofri rente-data.\n",
+    "        start_date (str): Startdato i formatet 'YYYY-MM-DD'.\n",
+    "        end_date (str, optional): Slutdato i formatet 'YYYY-MM-DD'. Hvis None, filtreres kun på startdato.\n",
+    "        output_path (str, optional): Sti til den filtrerede CSV-fil. Standard er \"./data_test/risk_free_filtered.csv\".\n",
+    "\n",
+    "    Example:\n",
+    "        rente_path = \"Data/ff3_m.csv\"\n",
+    "        start_date = \"2010-01-31\"\n",
+    "        \n",
+    "        # Med både start- og slutdato\n",
+    "        end_date = \"2023-11-30\"\n",
+    "        process_risk_free_rate(rente_path, start_date, end_date)\n",
+    "\n",
+    "        # Kun med startdato (ingen slutdato)\n",
+    "        process_risk_free_rate(rente_path, start_date)\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: En DataFrame med to kolonner: 'eom' (slutningen af måneden) og 'rf' (risikofri rente i procent).\n",
+    "    \"\"\"\n",
+    "    # Læs data fra filen\n",
+    "    risk_free = pd.read_csv(file_path, usecols=[\"yyyymm\", \"RF\"])\n",
+    "\n",
+    "    # Opret nye kolonner for risikofri rente og slutningen af måneden\n",
+    "    risk_free['rf'] = risk_free['RF'] / 100  # Konverter risikofri rente til procent\n",
+    "    risk_free['eom'] = risk_free['yyyymm'].astype(str) + \"01\"\n",
+    "    risk_free['eom'] = pd.to_datetime(risk_free['eom'], format=\"%Y%m%d\") + MonthEnd(0)\n",
+    "\n",
+    "    # Filtrer på startdato\n",
+    "    risk_free = risk_free[risk_free['eom'] >= pd.to_datetime(start_date)]\n",
+    "\n",
+    "    # Hvis slutdato er angivet, filtrer også på den\n",
+    "    if end_date is not None:\n",
+    "        risk_free = risk_free[risk_free['eom'] <= pd.to_datetime(end_date)]\n",
+    "\n",
+    "    print(f\"Filtrering udført. Antal rækker efter filtrering: {len(risk_free)}\")\n",
+    "\n",
+    "    # Gem det filtrerede dataset som CSV i `data_test`\n",
+    "    risk_free.to_csv(output_path, index=False)\n",
+    "    print(f\"Fil gemt som {output_path}\")\n",
+    "\n",
+    "    # Returner det filtrerede DataFrame\n",
+    "    return risk_free[['eom', 'rf']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8ecfe50a-abbf-41b1-a27f-ff314a912843",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtrering udført. Antal rækker efter filtrering: 167\n",
+      "Fil gemt som ./data_test/risk_free_test.csv\n",
+      "            eom      rf\n",
+      "1002 2010-01-31  0.0000\n",
+      "1003 2010-02-28  0.0000\n",
+      "1004 2010-03-31  0.0001\n",
+      "1005 2010-04-30  0.0001\n",
+      "1006 2010-05-31  0.0001\n",
+      "...         ...     ...\n",
+      "1176 2024-07-31  0.0045\n",
+      "1177 2024-08-31  0.0048\n",
+      "1178 2024-09-30  0.0040\n",
+      "1179 2024-10-31  0.0039\n",
+      "1180 2024-11-30  0.0040\n",
+      "\n",
+      "[179 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rente_path = \"Data/ff3_m.csv\"\n",
+    "start_date = \"2010-01-31\"\n",
+    "end_date = \"2023-11-30\"\n",
+    "process_risk_free_rate(rente_path, start_date, end_date, output_path=\"./data_test/risk_free_test.csv\")\n",
+    "print(risk_free_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "d2f63dcd-7c4d-4029-b6e0-692204d97889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import data_run_files\n",
+    "from data_run_files import monthly_returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96506acf-772e-4fa9-ab54-5427ab514af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_list = [1,2]\n",
+    "monthly_returns(risk_free_df, h_list, file_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c655ff45-512f-4433-aaf6-ef5948a27641",
    "metadata": {},
