Made a lot of new functions. We still need to make all data collected rdy to use

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -3328,24 +3328,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "d2f63dcd-7c4d-4029-b6e0-692204d97889",
    "metadata": {},
    "outputs": [],
    "source": [
     "import data_run_files\n",
-    "from data_run_files import monthly_returns"
+    "from data_run_files import monthly_returns\n",
+    "import General_Functions as GF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "96506acf-772e-4fa9-ab54-5427ab514af0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>eom</th>\n",
+       "      <th>eom_ret</th>\n",
+       "      <th>ret_ld1</th>\n",
+       "      <th>tr_ld1</th>\n",
+       "      <th>horizon</th>\n",
+       "      <th>ret_ld2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-01-31</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "      <td>0.042934</td>\n",
+       "      <td>0.042934</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "      <td>2010-03-31</td>\n",
+       "      <td>0.007960</td>\n",
+       "      <td>0.007960</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-03-31</td>\n",
+       "      <td>2010-04-30</td>\n",
+       "      <td>-0.127589</td>\n",
+       "      <td>-0.127489</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-04-30</td>\n",
+       "      <td>2010-05-31</td>\n",
+       "      <td>-0.049307</td>\n",
+       "      <td>-0.049207</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-05-31</td>\n",
+       "      <td>2010-06-30</td>\n",
+       "      <td>0.103772</td>\n",
+       "      <td>0.103872</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57443</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-07-31</td>\n",
+       "      <td>2023-08-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.062004</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.057504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57444</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-08-31</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.032584</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.028084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57445</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>2023-10-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.044489</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.048789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57446</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-10-31</td>\n",
+       "      <td>2023-11-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.004700</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57447</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-11-30</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.004400</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>57448 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id        eom    eom_ret   ret_ld1    tr_ld1  horizon   ret_ld2\n",
+       "0      10104 2010-01-31 2010-02-28  0.042934  0.042934        1       NaN\n",
+       "1      10104 2010-02-28 2010-03-31  0.007960  0.007960        1       NaN\n",
+       "2      10104 2010-03-31 2010-04-30 -0.127589 -0.127489        1       NaN\n",
+       "3      10104 2010-04-30 2010-05-31 -0.049307 -0.049207        1       NaN\n",
+       "4      10104 2010-05-31 2010-06-30  0.103772  0.103872        1       NaN\n",
+       "...      ...        ...        ...       ...       ...      ...       ...\n",
+       "57443  92655 2023-07-31 2023-08-31       NaN  0.062004        2  0.057504\n",
+       "57444  92655 2023-08-31 2023-09-30       NaN  0.032584        2  0.028084\n",
+       "57445  92655 2023-09-30 2023-10-31       NaN -0.044489        2 -0.048789\n",
+       "57446  92655 2023-10-31 2023-11-30       NaN  0.004700        2  0.000000\n",
+       "57447  92655 2023-11-30 2023-12-31       NaN  0.004400        2  0.000000\n",
+       "\n",
+       "[57448 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "h_list = [1,2]\n",
-    "monthly_returns(risk_free_df, h_list, file_path)"
+    "file_path_usa_test = \"./data_test/usa_test.parquet\"\n",
+    "monthly_returns(risk_free_df, h_list, file_path_usa_test)"
    ]
   },
   {
