Made a new notebook for data collection

--- a/Collect_data.ipynb
+++ b/Collect_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "54d90d96-7ddc-452e-b0e4-b0033c0fb6eb",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "db64dcc8-42c2-4485-a463-d2ececc96577",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "4eb66be8-520a-4914-bbce-35182d60f0eb",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "7ac429e3-bfdb-4f55-9bcf-7504f02525f3",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "[5 rows x 159 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,12 +778,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "ff7a676c-126a-4d70-90b2-d564bc34bade",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_daily_returns(file_path, chars):\n",
+    "def prepare_daily_returns(file_path, data):\n",
     "    \"\"\"\n",
     "    Forbereder daglige afkastdata.\n",
     "    \n",
@@ -794,8 +794,9 @@
     "    Returns:\n",
     "        pd.DataFrame: DataFrame med daglige afkast.\n",
     "    \"\"\"\n",
-    "    daily = pd.read_csv(file_path, usecols=[\"id\", \"date\", \"ret_exc\"])\n",
-    "    daily = daily[daily[\"ret_exc\"].notna() & daily[\"id\"].isin(chars[\"id\"].unique())]\n",
+    "    usecols=[\"id\", \"date\", \"ret_exc\"]\n",
+    "    daily = pd.read_parquet(file_path, engine=\"pyarrow\", columns=usecols)\n",
+    "    daily = daily[daily[\"ret_exc\"].notna() & daily[\"id\"].isin(data[\"id\"].unique())]\n",
     "    daily[\"date\"] = pd.to_datetime(daily[\"date\"], format=\"%Y%m%d\")\n",
     "    daily[\"eom\"] = daily[\"date\"] + pd.offsets.MonthEnd(0)\n",
     "    \n",
@@ -804,11 +805,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "66df37bf-56f0-460a-9ad6-96e2492cd494",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>ret_exc</th>\n",
+       "      <th>eom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-02-01</td>\n",
+       "      <td>0.006938</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-02-02</td>\n",
+       "      <td>0.023255</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-02-03</td>\n",
+       "      <td>-0.000421</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-02-04</td>\n",
+       "      <td>-0.026948</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>0.019039</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602507</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-12-22</td>\n",
+       "      <td>0.000624</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602508</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-12-26</td>\n",
+       "      <td>-0.000741</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602509</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>0.005104</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602510</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-12-28</td>\n",
+       "      <td>0.003833</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602511</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-12-29</td>\n",
+       "      <td>0.002788</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>602512 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id       date   ret_exc        eom\n",
+       "0       10104 2010-02-01  0.006938 2010-02-28\n",
+       "1       10104 2010-02-02  0.023255 2010-02-28\n",
+       "2       10104 2010-02-03 -0.000421 2010-02-28\n",
+       "3       10104 2010-02-04 -0.026948 2010-02-28\n",
+       "4       10104 2010-02-05  0.019039 2010-02-28\n",
+       "...       ...        ...       ...        ...\n",
+       "602507  92655 2023-12-22  0.000624 2023-12-31\n",
+       "602508  92655 2023-12-26 -0.000741 2023-12-31\n",
+       "602509  92655 2023-12-27  0.005104 2023-12-31\n",
+       "602510  92655 2023-12-28  0.003833 2023-12-31\n",
+       "602511  92655 2023-12-29  0.002788 2023-12-31\n",
+       "\n",
+       "[602512 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare_daily_returns(\"./data_test/usa_dsf_test.parquet\", data)"
+   ]
   },
   {
    "cell_type": "code",
