Fået lavet denne del: Prepare matrix of future monthly returns

--- a/Lokal_test.ipynb
+++ b/Lokal_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "18690dbb-f861-4899-b70d-ada55a051871",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,30 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from General_Functions import long_horizon_ret\n",
-    "from Main import settings"
+    "from Main import settings\n",
+    "from pandas.tseries.offsets import MonthEnd\n",
+    "from Prepare_Data import process_risk_free_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "aed30502-7f51-4947-a871-efb3e80f1250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_nan(df):\n",
+    "    nan_count = df.isna().sum()  # Antal NaN per kolonne\n",
+    "    nan_percentage = (nan_count / len(df)) * 100  # Procentandel af NaN per kolonne\n",
+    "    \n",
+    "    nan_df = pd.DataFrame({\n",
+    "        'Missing Values': nan_count,\n",
+    "        'Percentage (%)': nan_percentage\n",
+    "    }).sort_values(by='Missing Values', ascending=False)\n",
+    "    \n",
+    "    print(f\"Total missing values in DataFrame: {df.isna().sum().sum()} ({df.isna().sum().sum() / df.size * 100:.2f}%)\")\n",
+    "    \n",
+    "    return nan_df"
    ]
   },
   {
@@ -26,7 +49,9 @@
   {
    "cell_type": "markdown",
    "id": "2babfa10-ed72-4d25-8a10-d2d75cd511ed",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Quick preprosseing steps"
    ]
@@ -505,8 +530,336 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1da50f4b-8397-437d-91e1-b8e340e534a1",
+   "id": "9ef4f26b-f90a-4207-929b-f48e97e258e9",
    "metadata": {},
+   "source": [
+    "## Prepare matrix of future monthly returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "65cac43f-2b3c-48af-a324-8a19e092f93d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id excntry        eom   ret_exc\n",
+      "0      76076     USA 2010-01-31 -0.061432\n",
+      "1      11955     USA 2010-01-31 -0.052084\n",
+      "2      77702     USA 2010-01-31 -0.055102\n",
+      "3      77274     USA 2010-01-31  0.115525\n",
+      "4      76614     USA 2010-01-31  0.102536\n",
+      "...      ...     ...        ...       ...\n",
+      "28719  73139     USA 2023-11-30  0.092201\n",
+      "28720  59459     USA 2023-11-30  0.074291\n",
+      "28721  71563     USA 2023-11-30  0.147198\n",
+      "28722  72726     USA 2023-11-30  0.122297\n",
+      "28723  60442     USA 2023-11-30  0.165839\n",
+      "\n",
+      "[28724 rows x 4 columns]\n",
+      "          id        eom   ret_ld1   ret_ld2   ret_ld3   ret_ld4   ret_ld5  \\\n",
+      "0      10104 2010-01-31  0.068941  0.042934  0.007960 -0.127589 -0.049307   \n",
+      "1      10104 2010-02-28  0.042934  0.007960 -0.127589 -0.049307  0.103772   \n",
+      "2      10104 2010-03-31  0.007960 -0.127589 -0.049307  0.103772 -0.076057   \n",
+      "3      10104 2010-04-30 -0.127589 -0.049307  0.103772 -0.076057  0.228989   \n",
+      "4      10104 2010-05-31 -0.049307  0.103772 -0.076057  0.228989  0.095977   \n",
+      "...      ...        ...       ...       ...       ...       ...       ...   \n",
+      "28719  92655 2023-07-31 -0.063368  0.057611  0.057504  0.028084  0.000000   \n",
+      "28720  92655 2023-08-31  0.057611  0.057504  0.028084  0.000000  0.000000   \n",
+      "28721  92655 2023-09-30  0.057504  0.028084  0.000000  0.000000  0.000000   \n",
+      "28722  92655 2023-10-31  0.028084  0.000000  0.000000  0.000000  0.000000   \n",
+      "28723  92655 2023-11-30  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+      "\n",
+      "        ret_ld6   ret_ld7   ret_ld8   ret_ld9  ret_ld10  ret_ld11  ret_ld12  \n",
+      "0      0.103772 -0.076057  0.228989  0.095977 -0.079590  0.157190  0.024854  \n",
+      "1     -0.076057  0.228989  0.095977 -0.079590  0.157190  0.024854  0.027040  \n",
+      "2      0.228989  0.095977 -0.079590  0.157190  0.024854  0.027040  0.016118  \n",
+      "3      0.095977 -0.079590  0.157190  0.024854  0.027040  0.016118  0.077342  \n",
+      "4     -0.079590  0.157190  0.024854  0.027040  0.016118  0.077342 -0.048400  \n",
+      "...         ...       ...       ...       ...       ...       ...       ...  \n",
+      "28719  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
+      "28720  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
+      "28721  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
+      "28722  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
+      "28723  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
+      "\n",
+      "[28724 rows x 14 columns]\n",
+      "Total missing values in DataFrame: 0 (0.00%)\n",
+      "          Missing Values  Percentage (%)\n",
+      "id                     0             0.0\n",
+      "eom                    0             0.0\n",
+      "ret_ld1                0             0.0\n",
+      "ret_ld2                0             0.0\n",
+      "ret_ld3                0             0.0\n",
+      "ret_ld4                0             0.0\n",
+      "ret_ld5                0             0.0\n",
+      "ret_ld6                0             0.0\n",
+      "ret_ld7                0             0.0\n",
+      "ret_ld8                0             0.0\n",
+      "ret_ld9                0             0.0\n",
+      "ret_ld10               0             0.0\n",
+      "ret_ld11               0             0.0\n",
+      "ret_ld12               0             0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path_world_ret_test=\"./data_test/world_ret_test.csv\"\n",
+    "file_path_risk_free_test=\"./data_test/risk_free_test.csv\"\n",
+    "monthly = pd.read_csv(file_path_world_ret_test, usecols=[\"excntry\", \"id\", \"eom\", \"ret_exc\"], dtype={\"eom\": str})\n",
+    "\n",
+    "# Filtrér kun USA og CRSP-observationer\n",
+    "monthly = monthly[(monthly[\"excntry\"] == \"USA\") & (monthly[\"id\"] <= 99999)]\n",
+    "\n",
+    "# Konverter 'eom' fra string til datetime\n",
+    "monthly[\"eom\"] = pd.to_datetime(monthly[\"eom\"]) #monthly[\"eom\"] = pd.to_datetime(monthly[\"eom\"], format=\"%Y%m%d\"), this is already in the right dataformat\n",
+    "#print(monthly)\n",
+    "#print(monthly.dtypes)\n",
+    "print(monthly)\n",
+    "\n",
+    "horizon_K = settings[\"pf\"][\"hps\"][\"m1\"][\"K\"]\n",
+    "\n",
+    "# Anvend long_horizon_ret med de relevante parametre\n",
+    "data_ret = long_horizon_ret(monthly, h=horizon_K, impute=\"zero\")\n",
+    "data_ret = data_ret.drop(columns=[\"start\", \"end\", \"merge_date\"])\n",
+    "\n",
+    "\n",
+    "# Vis de første par rækker for at bekræfte resultatet\n",
+    "print(data_ret)\n",
+    "#print(data_ret)\n",
+    "nan_stats = check_nan(data_ret)\n",
+    "print(nan_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "a9d0a441-f1ee-49ed-8bd6-2500bc5c33a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id        eom    eom_ret   ret_ld1\n",
+      "0      10104 2010-01-31 2010-02-28  0.068941\n",
+      "1      10104 2010-02-28 2010-03-31  0.042934\n",
+      "2      10104 2010-03-31 2010-04-30  0.007960\n",
+      "3      10104 2010-04-30 2010-05-31 -0.127589\n",
+      "4      10104 2010-05-31 2010-06-30 -0.049307\n",
+      "...      ...        ...        ...       ...\n",
+      "28719  92655 2023-07-31 2023-08-31 -0.063368\n",
+      "28720  92655 2023-08-31 2023-09-30  0.057611\n",
+      "28721  92655 2023-09-30 2023-10-31  0.057504\n",
+      "28722  92655 2023-10-31 2023-11-30  0.028084\n",
+      "28723  92655 2023-11-30 2023-12-31  0.000000\n",
+      "\n",
+      "[28724 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Behold kun nødvendige kolonner og beregn eom_ret\n",
+    "data_ret_ld1 = data_ret[[\"id\", \"eom\", \"ret_ld1\"]].copy()\n",
+    "\n",
+    "# Beregn eom_ret: sidste dag i næste måned\n",
+    "data_ret_ld1[\"eom_ret\"] = data_ret_ld1[\"eom\"] + pd.DateOffset(months=1)\n",
+    "data_ret_ld1[\"eom_ret\"] = data_ret_ld1[\"eom_ret\"] + MonthEnd(0)\n",
+    "# Omarranger kolonnerne, så 'ret_ld1' kommer sidst\n",
+    "data_ret_ld1 = data_ret_ld1[[\"id\", \"eom\", \"eom_ret\", \"ret_ld1\"]]\n",
+    "print(data_ret_ld1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "83e06817-057a-42cc-8995-e004414ec037",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id        eom    eom_ret   ret_ld1      rf\n",
+      "0      10104 2010-01-31 2010-02-28  0.068941  0.0000\n",
+      "1      10104 2010-02-28 2010-03-31  0.042934  0.0000\n",
+      "2      10104 2010-03-31 2010-04-30  0.007960  0.0001\n",
+      "3      10104 2010-04-30 2010-05-31 -0.127589  0.0001\n",
+      "4      10104 2010-05-31 2010-06-30 -0.049307  0.0001\n",
+      "...      ...        ...        ...       ...     ...\n",
+      "28719  92655 2023-07-31 2023-08-31 -0.063368  0.0045\n",
+      "28720  92655 2023-08-31 2023-09-30  0.057611  0.0045\n",
+      "28721  92655 2023-09-30 2023-10-31  0.057504  0.0043\n",
+      "28722  92655 2023-10-31 2023-11-30  0.028084  0.0047\n",
+      "28723  92655 2023-11-30 2023-12-31  0.000000  0.0044\n",
+      "\n",
+      "[28724 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_ret_ld1 = data_ret_ld1.merge(risk_free, on=\"eom\", how=\"left\")\n",
+    "print(data_ret_ld1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "458872db-69a5-4721-97fd-17c389c2527b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id        eom    eom_ret   ret_ld1      rf    tr_ld1\n",
+      "0      10104 2010-01-31 2010-02-28  0.068941  0.0000  0.068941\n",
+      "1      10104 2010-02-28 2010-03-31  0.042934  0.0000  0.042934\n",
+      "2      10104 2010-03-31 2010-04-30  0.007960  0.0001  0.008060\n",
+      "3      10104 2010-04-30 2010-05-31 -0.127589  0.0001 -0.127489\n",
+      "4      10104 2010-05-31 2010-06-30 -0.049307  0.0001 -0.049207\n",
+      "...      ...        ...        ...       ...     ...       ...\n",
+      "28719  92655 2023-07-31 2023-08-31 -0.063368  0.0045 -0.058868\n",
+      "28720  92655 2023-08-31 2023-09-30  0.057611  0.0045  0.062111\n",
+      "28721  92655 2023-09-30 2023-10-31  0.057504  0.0043  0.061804\n",
+      "28722  92655 2023-10-31 2023-11-30  0.028084  0.0047  0.032784\n",
+      "28723  92655 2023-11-30 2023-12-31  0.000000  0.0044  0.004400\n",
+      "\n",
+      "[28724 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Beregn total afkast: excess return + rf\n",
+    "data_ret_ld1[\"tr_ld1\"] = data_ret_ld1[\"ret_ld1\"] + data_ret_ld1[\"rf\"]\n",
+    "print(data_ret_ld1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "21123051-3ac3-4d7d-aa80-06110e8e7a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id        eom    eom_ret   ret_ld1    tr_ld1\n",
+      "0      10104 2010-01-31 2010-02-28  0.068941  0.068941\n",
+      "1      10104 2010-02-28 2010-03-31  0.042934  0.042934\n",
+      "2      10104 2010-03-31 2010-04-30  0.007960  0.008060\n",
+      "3      10104 2010-04-30 2010-05-31 -0.127589 -0.127489\n",
+      "4      10104 2010-05-31 2010-06-30 -0.049307 -0.049207\n",
+      "...      ...        ...        ...       ...       ...\n",
+      "28719  92655 2023-07-31 2023-08-31 -0.063368 -0.058868\n",
+      "28720  92655 2023-08-31 2023-09-30  0.057611  0.062111\n",
+      "28721  92655 2023-09-30 2023-10-31  0.057504  0.061804\n",
+      "28722  92655 2023-10-31 2023-11-30  0.028084  0.032784\n",
+      "28723  92655 2023-11-30 2023-12-31  0.000000  0.004400\n",
+      "\n",
+      "[28724 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fjern 'rf' kolonnen efter brug\n",
+    "data_ret_ld1.drop(columns=[\"rf\"], inplace=True)\n",
+    "print(data_ret_ld1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "3690cbd1-10da-4b3e-8672-ec80b746050b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id        eom    tr_ld0    eom_ret   ret_ld1    tr_ld1\n",
+      "0      10104 2010-01-31       NaN 2010-02-28  0.068941  0.068941\n",
+      "1      10104 2010-02-28  0.068941 2010-03-31  0.042934  0.042934\n",
+      "2      10104 2010-03-31  0.042934 2010-04-30  0.007960  0.008060\n",
+      "3      10104 2010-04-30  0.008060 2010-05-31 -0.127589 -0.127489\n",
+      "4      10104 2010-05-31 -0.127489 2010-06-30 -0.049307 -0.049207\n",
+      "...      ...        ...       ...        ...       ...       ...\n",
+      "28719  92655 2023-07-31  0.053142 2023-08-31 -0.063368 -0.058868\n",
+      "28720  92655 2023-08-31 -0.058868 2023-09-30  0.057611  0.062111\n",
+      "28721  92655 2023-09-30  0.062111 2023-10-31  0.057504  0.061804\n",
+      "28722  92655 2023-10-31  0.061804 2023-11-30  0.028084  0.032784\n",
+      "28723  92655 2023-11-30  0.032784 2023-12-31  0.000000  0.004400\n",
+      "\n",
+      "[28724 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Opret en kopi af data_ret_ld1 med justeret eom\n",
+    "data_ret_ld1_shifted = data_ret_ld1[[\"id\", \"eom\", \"tr_ld1\"]].copy()\n",
+    "\n",
+    "# Flyt eom til næste måneds sidste dag\n",
+    "data_ret_ld1_shifted[\"eom\"] = data_ret_ld1_shifted[\"eom\"] + pd.DateOffset(months=1)\n",
+    "data_ret_ld1_shifted[\"eom\"] = data_ret_ld1_shifted[\"eom\"] + MonthEnd(0)\n",
+    "\n",
+    "# Omdøb tr_ld1 til tr_ld0\n",
+    "data_ret_ld1_shifted.rename(columns={\"tr_ld1\": \"tr_ld0\"}, inplace=True)\n",
+    "\n",
+    "# Merge for at inkludere tr_ld0 i data_ret_ld1\n",
+    "data_ret_ld1 = data_ret_ld1.merge(data_ret_ld1_shifted, on=[\"id\", \"eom\"], how=\"left\")\n",
+    "\n",
+    "#Omarranger kolonner\n",
+    "data_ret_ld1 = data_ret_ld1[[\"id\", \"eom\", \"tr_ld0\", \"eom_ret\", \"ret_ld1\", \"tr_ld1\"]]\n",
+    "\n",
+    "# Fjern 'monthly' variablen fra hukommelsen\n",
+    "del monthly\n",
+    "\n",
+    "# Vis de første rækker for at bekræfte resultatet\n",
+    "print(data_ret_ld1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d736f85c-f477-40bd-8a30-4decdcb89d21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9fc555a-c973-4875-8d3d-c3a281eb5815",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea71a2c4-cbd6-4435-9729-0f7b391afadb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d3fc588-29c1-496b-aa6c-39405d5f55f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1da50f4b-8397-437d-91e1-b8e340e534a1",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Lav monthly_ret_monthly.csv fil kun med vores test id'er"
    ]
